html markup for profile-match-toggle-content

--- a/featureTestingToggleContent/profile-match-toggle-content.html
+++ b/featureTestingToggleContent/profile-match-toggle-content.html
@@ -35,9 +35,9 @@ id="one-display"
  id="two-display"
  id="three-display"
                -->
-              <input aria-labelledby="first-profile-display" type="radio"  name="volunteer-profile-display">
-              <input aria-labelledby="second-profile-display" type="radio" name="volunteer-profile-display">
-              <input aria-labelledby="third-profile-display" type="radio"  name="volunteer-profile-display">
+              <input type="radio"  name="volunteer-profile-display">
+              <input type="radio" name="volunteer-profile-display">
+              <input type="radio"  name="volunteer-profile-display">
               <div class="arrow-container">
                 <span class="left-arrow">&#60;</span>
                 <span class="right-arrow">&#62;</span>
@@ -75,7 +75,7 @@ id="one-display"
                   <p class="display-role">Software Engineer</p>
                 </div>
             </article>
-            <article id="nonprofit-displays" class="testimonials__displays">
+            <article id="non-profit-displays" class="testimonials__displays">
               <input type="radio" name="non-profit-profile-display">
               <input type="radio" name="non-profit-profile-display">
               <input type="radio" name="non-profit-profile-display">
@@ -212,6 +212,6 @@ id="one-display"
         </article>
       </div>
     </section>
-    <script src="profile-match-toggle-content.js"></script>
+    <script src="profile-match-toggle-content-better-approach.js"></script>
   </body>
 </html>
