keyboard working html file

--- a/featureTestingToggleContent/profile-match-toggle-content.html
+++ b/featureTestingToggleContent/profile-match-toggle-content.html
@@ -39,8 +39,8 @@ id="one-display"
               <input type="radio" name="volunteer-profile-display">
               <input type="radio"  name="volunteer-profile-display">
               <div class="arrow-container">
-                <span class="left-arrow">&#60;</span>
-                <span class="right-arrow">&#62;</span>
+                <button class="left-arrow">&#60;</button>
+                <button class="right-arrow">&#62;</button>
               </div>
               <div id="first-display" class="testimonials__display">
                     <img src="https://source.unsplash.com/random/500x400" alt="" />
@@ -80,8 +80,8 @@ id="one-display"
               <input type="radio" name="non-profit-profile-display">
               <input type="radio" name="non-profit-profile-display">
               <div class="arrow-container">
-                <span class="left-arrow">&#60;</span>
-                <span class="right-arrow">&#62;</span>
+                <button class="left-arrow">&#60;</button>
+                <button class="right-arrow">&#62;</button>
               </div>
               <div id="first-display" class="testimonials__display">
                     <img src="https://source.unsplash.com/random/500x400" alt="" />
@@ -121,8 +121,8 @@ id="one-display"
               <input type="radio" name="sponsors-profile-display">
               <input type="radio" name="sponsors-profile-display">
               <div class="arrow-container">
-                <span class="left-arrow">&#60;</span>
-                <span class="right-arrow">&#62;</span>
+                <button class="left-arrow">&#60;</button>
+                <button class="right-arrow">&#62;</button>
               </div>
               <div id="first-display" class="testimonials__display">
                     <img src="https://source.unsplash.com/random/500x400" alt="" />
