markup code for toggle-content close to done

--- a/featureTestingToggleContent/profile-match-toggle-content.html
+++ b/featureTestingToggleContent/profile-match-toggle-content.html
@@ -35,9 +35,11 @@ id="one-display"
  id="two-display"
  id="three-display"
                -->
-              <input type="radio"  name="volunteer-profile-display">
-              <input type="radio" name="volunteer-profile-display">
-              <input type="radio"  name="volunteer-profile-display">
+               <!-- we are adding the id and aria-labelledby to match the labels in the profile container by using js based on the radio btn checked (three toggle) -->
+               <input type="radio"  name="volunteer-profile-display">
+               <input type="radio" name="volunteer-profile-display">
+               <input type="radio"  name="volunteer-profile-display">
+               <!-- we are adding the id and aria-labelledby to match the labels in the profile container by using js based on the radio btn checked (three toggle) -->
               <div class="arrow-container">
                 <button class="left-arrow">&#60;</button>
                 <button class="right-arrow">&#62;</button>
@@ -76,9 +78,11 @@ id="one-display"
                 </div>
             </article>
             <article id="non-profit-displays" class="testimonials__displays">
+              <!-- we are adding the id and aria-labelledby to match the labels in the profile container by using js based on the radio btn checked (three toggle) -->
               <input type="radio" name="non-profit-profile-display">
               <input type="radio" name="non-profit-profile-display">
               <input type="radio" name="non-profit-profile-display">
+              <!-- we are adding the id and aria-labelledby to match the labels in the profile container by using js based on the radio btn checked (three toggle) -->
               <div class="arrow-container">
                 <button class="left-arrow">&#60;</button>
                 <button class="right-arrow">&#62;</button>
@@ -117,9 +121,11 @@ id="one-display"
                 </div>
             </article>
             <article id="sponsors-displays" class="testimonials__displays">
+              <!-- we are adding the id and aria-labelledby to match the labels in the profile container by using js based on the radio btn checked (three toggle) -->
               <input type="radio" name="sponsors-profile-display">
               <input type="radio" name="sponsors-profile-display">
               <input type="radio" name="sponsors-profile-display">
+              <!-- we are adding the id and aria-labelledby to match the labels in the profile container by using js based on the radio btn checked (three toggle) -->
               <div class="arrow-container">
                 <button class="left-arrow">&#60;</button>
                 <button class="right-arrow">&#62;</button>
