adding content to markup

--- a/modalFeature/modalIndex.html
+++ b/modalFeature/modalIndex.html
@@ -15,7 +15,12 @@
       <div class="wrapper">
         <!-- <dialog class="dialog"></dialog> -->
         <div class="modal-container">
-          <form id="modal" class="flow-content" role="form" method="dialog">
+          <form
+            id="modal"
+            class="flow-content visually-hidden"
+            role="form"
+            method="dialog"
+          >
             <!-- the text in label will be overwritten by aria-label. what ever is the value to aria-label -->
             <label for="name" aria-label="Enter Full Name">Full Name</label>
             <input id="name" type="text" />
@@ -43,11 +48,10 @@
             </textarea>
             <button class="form-btn" type="submit">Submit</button>
           </form>
+          <a href="#" class="modal-btn" aria-label="open modal form">
+            Open Modal Form
+          </a>
         </div>
-
-        <a href="#" class="modal-btn" aria-label="open modal">
-          Open Modal Form
-        </a>
       </div>
     </section>
     <script src="modalApp.js"></script>
