--- a/modalFeature/modalIndex.html
+++ b/modalFeature/modalIndex.html
@@ -14,6 +14,14 @@
     <section role="region" class="main-content">
       <div class="wrapper">
         <!-- <dialog class="dialog"></dialog> -->
+        <details>
+          <summary>Transcript</summary>
+          <p class="transcript-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+            molestiae, amet, voluptate fugit eveniet dolorum quae ipsam
+            repudiandae dolorem id inventore cum esse, consequuntur vel.
+          </p>
+        </details>
         <div class="modal-container">
           <form
             id="modal"
@@ -48,7 +56,7 @@
             </textarea>
             <button class="form-btn" type="submit">Submit</button>
           </form>
-          <a href="#" class="modal-btn" aria-label="open modal form">
+          <a href="#modal" class="modal-btn" aria-label="open modal form">
             Open Modal Form
           </a>
         </div>
