use button for this feature

--- a/accordionAccessible/accessibleAccordionIndex.html
+++ b/accordionAccessible/accessibleAccordionIndex.html
@@ -7,21 +7,134 @@
     <meta name="description" content="Learning Nodejs" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="modalStyles.css" />
+    <link rel="stylesheet" href="accessibleAccordionStyles.css" />
     <title>Modal Feature</title>
   </head>
   <body>
     <section role="region" class="main-content">
       <div class="wrapper">
         <!-- <dialog class="dialog"></dialog> -->
-        <details>
+
+        <!-- <article class="accordion">
+          <ul class="accordion-list">
+            <li>
+              <details>
+                <summary>Transcript</summary>
+                <p class="transcript-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Placeat molestiae, amet, voluptate fugit eveniet dolorum quae
+                  ipsam repudiandae dolorem id inventore cum esse, consequuntur
+                  vel.
+                </p>
+              </details>
+            </li>
+            <li>
+              <details>
+                <summary>Volunteer</summary>
+                <p class="transcript-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Placeat molestiae, amet, voluptate fugit eveniet dolorum quae
+                  ipsam repudiandae dolorem id inventore cum esse, consequuntur
+                  vel.
+                </p>
+              </details>
+            </li>
+            <li>
+              <details>
+                <summary>Non-Profit</summary>
+                <p class="transcript-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Placeat molestiae, amet, voluptate fugit eveniet dolorum quae
+                  ipsam repudiandae dolorem id inventore cum esse, consequuntur
+                  vel.
+                </p>
+              </details>
+            </li>
+            <li>
+              <details>
+                <summary>Sponors</summary>
+                <p class="transcript-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Placeat molestiae, amet, voluptate fugit eveniet dolorum quae
+                  ipsam repudiandae dolorem id inventore cum esse, consequuntur
+                  vel.
+                </p>
+              </details>
+            </li>
+            <li>
+              <details>
+                <summary>Events</summary>
+                <p class="transcript-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Placeat molestiae, amet, voluptate fugit eveniet dolorum quae
+                  ipsam repudiandae dolorem id inventore cum esse, consequuntur
+                  vel.
+                </p>
+              </details>
+            </li>
+          </ul>
+        </article> -->
+        <div class="questions flow-content">
+          <div class="question">
+            <!-- when we give the <label> element the for attribute that match the id attribute for the input, the click radius is the label. the label and input inside a container
+                <div> or <li> when we declare display: flex on the label. its width will be the width of its parent(the container)    
+                -->
+            <input type="checkbox" id="check1" />
+            <label aria-expanded="false" for="check1" tabindex="0"
+              >How many team members can I invite?</label
+            >
+            <p class="question-content">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi,
+              repudiandae.
+            </p>
+          </div>
+          <div class="question">
+            <input type="checkbox" id="check2" />
+            <label for="check2" tabindex="0"
+              >What is the maximum file upload size?</label
+            >
+            <p class="question-content">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi,
+              repudiandae.
+            </p>
+          </div>
+          <div class="question">
+            <input type="checkbox" id="check3" />
+            <label for="check3" tabindex="0">How do I reset my password?</label>
+            <p class="question-content">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi,
+              repudiandae.
+            </p>
+          </div>
+          <div class="question">
+            <input type="checkbox" id="check4" />
+            <label for="check4" tabindex="0"
+              >Can I cancel my subscription?</label
+            >
+            <p class="question-content">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi,
+              repudiandae.
+            </p>
+          </div>
+          <div class="question">
+            <input type="checkbox" id="check5" />
+            <label for="check5" tabindex="0"
+              >Do you provide additional support?</label
+            >
+            <p class="question-content">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi,
+              repudiandae.
+            </p>
+          </div>
+        </div>
+        <!-- <details>
           <summary>Transcript</summary>
           <p class="transcript-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
             molestiae, amet, voluptate fugit eveniet dolorum quae ipsam
             repudiandae dolorem id inventore cum esse, consequuntur vel.
           </p>
-        </details>
+        </details> -->
         <div class="modal-container">
           <form
             id="modal"
