--- a/modalFeature/modalIndex.html
+++ b/modalFeature/modalIndex.html
@@ -22,13 +22,23 @@
             repudiandae dolorem id inventore cum esse, consequuntur vel.
           </p>
         </details> -->
-        <div class="modal-container">
-          <form
-            id="modal"
-            class="flow-content visually-hidden"
-            role="form"
-            method="dialog"
-          >
+
+        <div id="modal" class="modal-container">
+          <!-- class:visually-hidden -->
+
+          <form class="flow-content" role="form" method="dialog">
+            <a href="#!" class="close-btn" aria-label="Close">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="15"
+                height="15"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
+                />
+              </svg>
+            </a>
             <!-- the text in label will be overwritten by aria-label. what ever is the value to aria-label -->
             <label for="name" aria-label="Enter Full Name">Full Name</label>
             <!-- placeholder="Full Name" -->
@@ -88,8 +98,9 @@
         <a href="#modal" class="modal-btn" aria-label="open modal form">
           Open Modal Form
         </a>
+        <!-- <a href="#!" class="outside-btn"></a> -->
       </div>
     </section>
-    <script src="modalApp.js"></script>
+    <!-- <script src="modalApp.js"></script> -->
   </body>
 </html>
