progress modal html

--- a/modalFeature/modalIndex.html
+++ b/modalFeature/modalIndex.html
@@ -103,7 +103,13 @@
           -->
           <a href="#!" class="outside-btn"></a>
         </div>
-        <a href="#modal" class="modal-btn" aria-label="open modal form">
+        <!-- the href="#modal" has to match the element id -->
+        <a
+          href="#modal"
+          class="modal-btn"
+          role="button"
+          aria-label="open modal form"
+        >
           Open Modal Form
         </a>
       </div>
