html code modal

--- a/modalFeature/modalIndex.html
+++ b/modalFeature/modalIndex.html
@@ -11,7 +11,7 @@
     <title>Modal Feature</title>
   </head>
   <body>
-    <section role="region" class="main-content">
+    <section class="main-content">
       <div class="wrapper">
         <!-- <dialog class="dialog"></dialog> -->
         <!-- <details>
@@ -26,7 +26,7 @@
         <div id="modal" class="modal-container">
           <!-- class:visually-hidden -->
 
-          <form class="flow-content" role="form" method="dialog">
+          <form class="flow-content" method="dialog">
             <a href="#!" tabindex="-1" class="close-btn" aria-label="Close">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
