read w3c modal html

--- a/modalFeature/modalIndex.html
+++ b/modalFeature/modalIndex.html
@@ -26,7 +26,7 @@
         <div id="modal" class="modal-container">
           <!-- class:visually-hidden -->
 
-          <form class="flow-content" method="dialog">
+          <form class="modal-form flow-content" method="dialog">
             <a href="#!" tabindex="-1" class="close-btn" aria-label="Close">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
