modal feature meets w3x checkpoints js

--- a/modalFeature/modalIndex.html
+++ b/modalFeature/modalIndex.html
@@ -27,7 +27,7 @@
           <!-- class:visually-hidden -->
 
           <form class="modal-form flow-content" method="dialog">
-            <a href="#!" tabindex="-1" class="close-btn" aria-label="Close">
+            <a href="#!" class="close-btn" aria-label="Close">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="15"
